Poprawa img oraz header (RWD)

--- a/o_firmie.html
+++ b/o_firmie.html
@@ -23,7 +23,7 @@
 		<header>
 
 			<div id="logo">
-					<img src="logo.png" alt=""/>
+					<img src="img/logo.png" alt=""/>
 			</div>
 
 			<div id="banner">
@@ -37,7 +37,7 @@
 
 				<nav>
 					<ol id="main">
-						<!--<a href="#"><i class="icon-menu"></i></a>-->
+						
 						<li><a href="o_firmie.html">O firmie </a></li>
 						<li><a href="produkty.html">Produkty </a></li>
 						<li><a href="doradztwo.html">Doradztwo techniczne </a></li>
@@ -47,7 +47,7 @@
 
 					<form>
 						<input type="search" placeholder="szukaj..."/>
-						<span class="search_button"><img src="lupa_szukaj.jpg"></span>
+						<span class="search_button"><img src="img/lupa_szukaj.jpg"></span>
 					</form>
 						
 				</nav>
