--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<header>
 
 			<div id="logo">
-					<img src="logo.png" alt=""/>
+					<img src="img/logo.png" alt=""/>
 			</div>
 
 			<div id="banner">
@@ -54,7 +54,7 @@
 
 					<form>
 						<input type="search" placeholder="szukaj..."/>
-						<span class="search_button"><img src="lupa_szukaj.jpg" alt=""></span>
+						<span class="search_button"><img src="img/lupa_szukaj.jpg" alt=""></span>
 					</form>
 						
 				</nav>
