--- a/produkty.html
+++ b/produkty.html
@@ -25,7 +25,7 @@
 		<header>
 
 			<div id="logo">
-					<img src="logo.png" alt=""/>
+					<img src="img/logo.png" alt=""/>
 			</div>
 
 			<div id="banner">
@@ -48,7 +48,7 @@
 					</ol>
 					<form>
 						<input type="search" placeholder="szukaj..."/>
-						<span class="search_button"><img src="lupa_szukaj.jpg" alt=""></span>
+						<span class="search_button"><img src="img/lupa_szukaj.jpg" alt=""></span>
 					</form>
 						
 				</nav>
@@ -119,7 +119,7 @@
 				
 				<article class="article-wrap">
 
-					<figure class="article-img"><img src="product_left.jpg" alt=""></figure>
+					<figure class="article-img"><img src="img/product_left.jpg" alt=""></figure>
 
 					<div class="article-text">
 
@@ -137,7 +137,7 @@
 
 				<article class="article-wrap">
 
-					<figure class="article-img"><img src="product_right.jpg" alt=""></figure>
+					<figure class="article-img"><img src="img/product_right.jpg" alt=""></figure>
 
 					<div class="article-text">
 
@@ -154,7 +154,7 @@
 
 				<article class="article-wrap">
 
-					<figure class="article-img"><img src="product_left.jpg" alt=""></figure>
+					<figure class="article-img"><img src="img/product_left.jpg" alt=""></figure>
 
 					<div class="article-text">
 
@@ -171,7 +171,7 @@
 
 				<article class="article-wrap">
 
-					<figure class="article-img"><img src="product_right.jpg" alt=""></figure>
+					<figure class="article-img"><img src="img/product_right.jpg" alt=""></figure>
 
 					<div class="article-text">
 
